--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding:0;
+  box-sizing: border-box;
+  font-family: 'Karla';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #191919;
+  color: #f2f2f2;
+  min-height: 100vh;
+ 
 }
+
+button {
+ cursor: pointer;
+}
+
+.container-light {
+  background-color: rgba(255, 255, 255, 0.885);
+  height: 100vh;
+}
+
+/* .alert {
+  margin-right:40px;
+  margin-left:40px;
+  height: 100px;
+} */
